--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ opt-level = 3
 
 [dependencies]
 bevy = { version = "0.11.3", features = ["dynamic_linking"] }
+bevy_rapier2d = { version = "*", features = ["debug-render-2d"] }
