--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ opt-level = 3
 [dependencies]
 bevy = { version = "0.11.3", features = ["dynamic_linking"] }
 bevy_rapier2d = { version = "*", features = ["debug-render-2d"] }
-rand = "0.8.5"
+fastrand = "2.0.1"
