chore: add build

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,6 @@ opt-level = 3
 
 
 [dependencies]
-bevy = { version = "0.11.3", features = ["dynamic_linking"] }
+bevy = { version = "0.11.3" }
 bevy_rapier2d = { version = "*", features = ["debug-render-2d"] }
 fastrand = "2.0.1"
